updated database to RDS

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ crispy-bootstrap5==2025.6
 Django==5.2.6
 django-crispy-forms==2.4
 sqlparse==0.5.3
-psycopg2==2.9.7
-python-dotenv==1.0.0
+psycopg2-binary==2.9.10
+python-dotenv==1.0.1
