--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,3 @@
 option_setting: 
     aws:elasticbeanstalk:container:python:
-        WSGIPath: django_blog.wsgi:application
+        WSGIPath: config.wsgi:application
